# MacTrack

./: .gitignore  README.md  main.py  utils.py
api/: alembic.ini  app.py  async_main.py  cli.py  client.py  config.template.toml  database.py  main.py  package.json  pyproject.toml  typings.py  updater.py
api/alembic/: env.py
api/alembic/versions/: 2023_08_09_2305-80d38c9c852a_testing_alembic_usage_add_approved_col_.py  2023_08_09_2324-0ff295211ebf_add_notification_type_for_each_filter.py  2023_08_11_2240-168a52c3a3ba_username_for_user.py  2023_08_15_2251-f471ed435c79_updated_created_fields_for_username.py  2023_08_16_0852-7e1bef9a4213_add_admin_flag_to_users.py  2023_08_19_1303-b8ea9a2053ba_add_name_field_for_filter.py  2023_08_23_1151-04c1db076a73_add_index_on_is_open.py  2023_08_24_1104-196123f7ddc9_remove_problematic_index_on_ag_add_.py
api/data/: __init__.py  base.py  base_model.py  config_model.py
api/data/http_models/: common.py  filter.py  session.py
api/data/mac_bid/: __init__.py  alias_utils.py  fts5.py  models.py
api/data/user/: __init__.py  filter.py  models.py
api/dependancies/: config.py  transaction.py
api/migrations/: env.py
api/migrations/versions/: 2023_08_09_2305-80d38c9c852a_testing_alembic_usage_add_approved_col_.py  2023_08_15_2251-f471ed435c79_updated_created_fields_for_username.py  2023_08_16_0852-7e1bef9a4213_add_admin_flag_to_users.py  2023_08_19_1303-b8ea9a2053ba_add_name_field_for_filter.py  2023_08_23_1151-04c1db076a73_add_index_on_is_open.py  (+4 more)
api/notification/: notification.py
api/routes/: auth.py
api/routes/auth/: session.py
api/scraper/: api_client.py  api_client_async.py  async_updater.py  cleanup.py  db_cleanup.py  notification.py  query_bench.py  updater.py  utils.py
(+138 files in other folders)
