[tool.poetry]
name = "mactracknotify"
version = "0.1.0"
description = ""
authors = ["Mattwmaster58 <mattwmaster58@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
aiosqlite = "^0.19.0"
alembic = "^1.11.2"
bcrypt = "^4.0.1"
brotli = "^1.0.9"
click = "^8.1.6"
jsbeautifier = "^1.14.9"
litestar = "^2.0.1"
picologging = "^0.9.2"
pydantic = {extras = ["email"], version = "^2.1.1"}
python = "^3.11"
pytz = "^2023.3"
requests = "^2.31.0"
rich = "^13.5.2"
structlog = "^23.1.0"
tqdm = "^4.66.0"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
